--- a/src/main/resources/locale_en_US.properties
+++ b/src/main/resources/locale_en_US.properties
@@ -33,7 +33,7 @@ nav.user=User
 nav.role=Role
 nav.app=App
 nav.type=Type
-nav.station=Station
+nav.httpAddress=HttpAddress
 nav.order=Order
 nav.user.show.all=Show all users
 nav.user.change=Change users role
@@ -44,8 +44,8 @@ nav.role.add=Add role
 nav.role.show.all=Show all roles
 nav.order.show.all=Show all orders
 nav.order.unclosed.orders=Show unclosed orders
-nav.station.show.all=Show all httpAddresses
-nav.station.add=Add httpAddress
+nav.httpAddress.show.all=Show all httpAddresses
+nav.httpAddress.add=Add httpAddress
 nav.app.add=Add app
 
 alert.wrong.login.password=Incorrect login and password. Try again.
@@ -76,13 +76,13 @@ title.show.user.page=Show user page
 title.show.all.types.page=Show all types page
 title.show.all.roles.page=Show all roles page
 title.show.all.orders.page=Show all orders page
-title.show.all.stations.page=Show all stations page
+title.show.all.httpAddresses.page=Show all httpAddresses page
 title.show.unclosed.orders.page=Show all unclosed orders page
 title.edit.user.page=Edit user page
 title.edit.price.page=Edit price page
 title.add.type.page=Add type page
 title.add.role.page=Add role page
-title.add.station.page=Add station page
+title.add.httpAddress.page=Add httpAddress page
 title.add.app.page=Add app page
 
 validation.first.name=Only latin or only russian letters up to 10 characters.
@@ -93,8 +93,8 @@ validation.balance=Only digits, up to 6 characters.
 validation.type.name=Only russian letters up to 15 characters.
 validation.type.price=Up to 10 BYR.
 validation.role.name=Only latin letters up to 10 characters.
-validation.stations.city=Only russian letters up to 9 characters
-validation.stations.location=Russian letters, digits spaces and commas
+validation.httpAddresses.web_shop=Only russian letters up to 9 characters
+validation.httpAddresses.location=Russian letters, digits spaces and commas
 
 table.number=No.
 table.order.start.rent=Start rent
@@ -144,14 +144,14 @@ add.type.form.submit=Add type
 add.role.form.role=Role
 add.role.form.role.placeholder=input role here
 add.role.form.submit=Add role
-add.station.form.web_shop=Web_shop
-add.station.form.city.placeholder=input web_shop here
-add.station.form.location=Location
-add.station.form.location.placeholder=input location here
-add.station.form.submit=Add httpAddress
-add.bike.form.type=Type
-add.bike.form.stations=HttpAddress
-add.bike.form.submit=Add app
+add.HttpAddress.form.web_shop=Web_shop
+add.HttpAddress.form.web_shop.placeholder=input web_shop here
+add.HttpAddress.form.location=Location
+add.HttpAddress.form.location.placeholder=input location here
+add.HttpAddress.form.submit=Add httpAddress
+add.app.form.type=Type
+add.app.form.HttpAddresses=HttpAddresses
+add.app.form.submit=Add app
 
 footer.language=Choose language
 footer.admin=On main
