--- a/src/main/resources/locale_ru_RU.properties
+++ b/src/main/resources/locale_ru_RU.properties
@@ -83,7 +83,7 @@ title.show.user.page=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043F\u04
 title.show.all.types.page=\u0412\u0441\u0435\u0020\u0442\u0438\u043f\u044b\u0020\u043f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0439
 title.show.all.roles.page=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0432\u0441\u0435 \u0440\u043E\u043B\u0438
 title.show.all.orders.page=\u0412\u0441\u0435 \u0437\u0430\u043A\u0430\u0437\u044B
-title.show.all.stations.page=\u0412\u0441\u0435 \u0441\u0442\u0430\u043D\u0446\u0438\u0438
+title.show.all.httpAddresses.page=\u0412\u0441\u0435 \u0441\u0442\u0430\u043D\u0446\u0438\u0438
 title.show.unclosed.orders.page=\u0412\u0441\u0435 \u043D\u0435\u0437\u0430\u043A\u0440\u044B\u0442\u044B\u0435 \u0437\u0430\u043A\u0430\u0437\u044B
 title.edit.user.page=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 title.edit.price.page=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0446\u0435\u043D\u0443
